--- a/src/style.css
+++ b/src/style.css
@@ -29,6 +29,7 @@ h3{
 p{
 font-family: Verdana, Geneva, Tahoma, sans-serif;
 display: flex;
+justify-content: center;
 
 }
 
@@ -83,4 +84,18 @@ display: flex;
     
     width: 500px;
 
+}
+
+.contact-btn{
+
+    background: rgb(229, 132, 181);
+    cursor: pointer;
+    border-radius: 4px;
+    color: white;
+    font-size: 18px;
+    line-height: 27px;
+    padding: 15px 30px;
+    margin-left: 45%;
+
+    
 }
